# MonsterHunterBuilds

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.MD  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
base/global/: base copy.html  base.html
base/global/partials/: head.html  menu.html  postblock.html
base/static/global/css/: styles.css
blog/: urls.py  views.py
blog/templates/blog/: example.html  index.html  post.html
djangoapp/: requirements.txt
djangoapp/blog/: admin.py  models.py  urls.py  views.py
djangoapp/blog/migrations/: 0001_initial.py  0002_category.py  0003_page.py  0004_alter_page_is_published_post.py  0005_post_created_by_post_updated_by.py  0006_alter_post_is_published.py  0007_postattachment.py  0008_alter_post_tag.py  0009_remove_post_tag_post_tags.py
djangoapp/blog/static/blog/css/: style.css
djangoapp/blog/templates/blog/: base.html
djangoapp/blog/templates/blog/pages/: index.html  page.html  post.html
djangoapp/blog/templates/blog/partials/: _footer.html  _head.html  _header.html  _pagination.html  _post-card.html  base.html
djangoapp/project/: settings.py  urls.py  wsgi.py
djangoapp/site_setup/: admin.py  context_processor.py  models.py
djangoapp/site_setup/migrations/: 0001_initial.py  0002_sitesetup.py  0003_alter_sitesetup_options.py  0004_alter_sitesetup_options.py  0005_alter_sitesetup_options_menulink_site_setup.py  0006_sitesetup_favicon.py  0007_alter_sitesetup_favicon.py
djangoapp/utils/: images.py  model_validator.py  rands.py  resize_image.py
home/: views.py
home/templates/home/: index.html
project/: settings.py  urls.py
scripts/: collectstatic.sh  commands.sh  makemigrations.sh  migrate.sh  runserver.sh  wait_psql.sh
typings/django_summernote/: admin.pyi  forms.pyi  models.pyi  utils.pyi  widgets.pyi
